--- a/styles.css
+++ b/styles.css
@@ -39,3 +39,11 @@ footer {
   font-family: 'Indie Flower', cursive;
 
 }
+@media (max-width: 1000px){
+  h1{
+    font-size: 3rem;
+  }
+  img{
+    width: 50%;
+  }
+}
