--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ footer {
     width: 30%;
   }
   .dice {
-    display: flex;
+    display: inline-block;
     flex-direction: column;
     align-items:center;
   } 
